fixed alignment issue

--- a/static-files-folder/styles/homepage.css
+++ b/static-files-folder/styles/homepage.css
@@ -10,6 +10,8 @@ body {
 div.container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
 }
 
